--- a/style.css
+++ b/style.css
@@ -1,14 +1,58 @@
 /* Общие стили */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  background-color: #55445c;
+}
+
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+ul {
+  list-style: none;
+}
 
 /* header стили */
+.header {
+  padding: 20px 0;
+  background-color: #436AAC;
+  margin-bottom: 20px;
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header_list {
+  display: flex;
+  gap: 30px
+}
+
 
 
 /* about_me стили */
 .about_me {
-  background-color: #436AAC;
   width: 90%;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: #436AAC;
+
 }
 .about_me .container {
   display: flex
@@ -18,15 +62,24 @@
 }
 
 /* education стили */
-.education {
-  width: 90%;
-  margin: auto;
-}
+
 
 /* projects стили */
-.projects {
-  width: 90%;
-  margin: auto;
+.projects{
+  background-color: #436AAC;
+}
+
+.block_project {
+  position: relative;
+  width: 48%;
+  height: 500px;
+  overflow: hidden;
+  border: none;
+  border-radius: 15px;
+  float: left;
+  margin: 10px;
+  z-index: -2;
+  background-color: #43B7B8;
 }
 
 .back_video {
@@ -39,17 +92,6 @@
   filter: blur(1px);
 }
 
-.block_project {
-  position: relative;
-  width: 48%;
-  height: 500px;
-  overflow: hidden;
-  border: none;
-  border-radius: 15px;
-  float: left;
-  margin: 10px;
-  /* background-color: #436AAC; */
-}
 .json_viewer_description {
   position: absolute;
   top: 50%;
@@ -58,18 +100,20 @@
   z-index: 1
 }
 
+.pvz_site_description {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  
+}
 
 
 /* hobbies стили */
-.hobbies {
-  width: 90%;
-  margin: auto;
-}
+
 
 /* contact стили */
-.contact {
-  width: 90%;
-  margin: auto;
-}
+
 
 /* footer стили */
